# devenv-templates

./: .gitignore  README.md  devenv.nix  devenv.yaml  flake.nix  treefmt.toml
.github/workflows/: ci.yml
lib/modules/: delta.nix  direnv.nix  git-hooks.nix  lsp.nix  strict-types.nix  treefmt.nix
lib/modules/services/: mysql.nix  postgres.nix  redis.nix  sqlite.nix
templates/python/: .gitignore  devenv.nix  pyproject.toml
templates/python+django/: .gitignore  devenv.nix  pyproject.toml  pyrightconfig.json  treefmt.toml
templates/python+fastapi/: devenv.nix  devenv.yaml  pyproject.toml  pyrightconfig.json  treefmt.toml
templates/python+flask/: .gitignore  devenv.nix  devenv.yaml  pyproject.toml  pyrightconfig.json  treefmt.toml
