[project]
name = "my-django-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "django>=5.0",
  "djangorestframework>=3.15",
  "django-filter>=24.0",
  "psycopg[binary]>=3.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-django>=4.8",
  "pytest-cov>=4.0",
  "django-stubs>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_django_project"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = [
  "E4", "E7", "E9",
  "F",
  "B",
  "W",
  "I",
  "C4",
  "UP",
  "DJ",
]
ignore = [
  "E501",
]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "django",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.isort.sections]
django = ["django", "rest_framework", "django_filters"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.django-stubs]
django_settings_module = "config.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
testpaths = ["tests"]
python_files = ["test_*.py"]
