[project]
name = "my-fastapi-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.0",
  "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_fastapi_project"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = [
  "E4", "E7", "E9",
  "F",
  "B",
  "W",
  "I",
  "C4",
  "UP",
]
ignore = [
  "E501",
]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "fastapi",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.isort.sections]
fastapi = ["fastapi", "pydantic", "starlette"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
