[project]
name = "my-flask-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "flask>=3.0",
  "flask-sqlalchemy>=3.1",
  "flask-migrate>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-flask>=1.3",
  "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_flask_project"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = [
  "E4", "E7", "E9",
  "F",
  "B",
  "W",
  "I",
  "C4",
  "UP",
]
ignore = [
  "E501",
]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "flask",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.lint.isort.sections]
flask = ["flask", "flask_sqlalchemy", "flask_migrate"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
