[project]
name = "my-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/my_project"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = [
  "E4", "E7", "E9",
  "F",
  "B",
  "W",
  "I",
  "C4",
  "UP",
]
ignore = [
  "E501",
]

[tool.ruff.lint.isort]
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
